# claude-crew

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.rr/: idea.txt  skew-warning.md
claude_crew/: __init__.py  auth.py  broker.py  cli.py  diagnostics.py  envelope.py  factories.py  instance_registry.py  redaction.py  sdk_teammate.py  server.py  teammate.py  teammate_memory.py  teammate_prompt.py  transcript.py  ui_server.py
doc/: BACKLOG.md  PRODUCT-VISION.md
scripts/: auto_memory_disable_spike.py  auto_memory_probe.py  hooks_spike.py  mcp_cold_start_spike.py  mcp_probe_server.py  mcp_spike.py  sdk_smoke_test.py  sdk_subagent_spike.py  setting_sources_spike.py  smoke_test.py
tests/: conftest.py  test_auth.py  test_broker.py  test_broker_startup_diagnostics.py  test_broker_tool_output.py  test_broker_transcript.py  test_dashboard_render.py  test_dashboard_tool_output.py  test_diagnostics.py  test_e2e_badge_pipeline.py  test_e2e_broker_snapshot.py  test_e2e_multi_instance.py  test_e2e_pack_parity.py  test_e2e_subagent_telemetry.py  test_e2e_token_cost.py  test_e2e_tool_events.py  test_e2e_tool_telemetry.py  test_e2e_ui.py  test_envelope.py  test_factories.py  test_factory_startup_diagnostics.py  test_fidelity_audit.py  test_fidelity_audit_frontmatter.py  test_format_compat_e2e.py  test_instance_registry.py  test_live_global_tools_probe.py  test_live_pack_mcp.py  test_live_sdk.py  test_live_subagents.py  test_live_teammate_delegation.py  test_pack_loader.py  test_plugin_config_visibility_spike.py  test_plugin_projectpath_prefix_match.py  test_redaction.py  (+21 more)
(+179 files in other folders)
