[project]
name = "claude-crew"
version = "0.1.0"
description = "Local multi-agent orchestrator: MCP-supervised crew of Agent-SDK teammates."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.68",
    "mcp[cli]>=1.2.0",
]

[project.scripts]
claude-crew = "claude_crew.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claude_crew"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
